<resources>
    <string name="app_name">Privi</string>
    <string name="welcome">Welcome to</string>
    <string name="continues">Continue</string>
    <string name="policies">by signing up you are agreeing to our privacy policy and terms of service</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip_video">Skip Video</string>
    <string name="permission">Permission</string>
    <string name="allow">Allow</string>
    <string name="cant_move_forward">You Need To Accept Permssions To Go Forward</string>
    <string name="enter_phone">Enter Your Number</string>
    <string name="fill_up">Fill in the field with your phone number</string>
    <string name="phone">Enter Phone Number</string>
    <string name="we_sent_code">We Sent You an SMS code</string>
    <string name="code_didnt_recieved">Code not recieved?</string>
    <string name="personal">Personal Information</string>
    <string name="user_name">UserName</string>
    <string name="please_enter_name">Please Enter UserName</string>
    <string name="personal_info_updated_successfully">Personal Info Updated Succesfully</string>
    <string name="strike">Registering your face</string>
    <string name="take_photo">Take Photo</string>
    <string name="image_uploaded_successfully">Image Uploaded Successfully</string>
    <string name="no_result">No Result</string>
    <string name="download">Download</string>
    <string name="log_out">LogOut</string>
</resources>