<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#00071D"
    android:layout_height="match_parent"
    tools:context=".introduction.IntroductionActivity">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:background="@drawable/introduction_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:textColor="@color/white_68"
        android:text="@string/welcome"
        android:layout_gravity="center"
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <ImageView
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome"
            app:srcCompat="@drawable/ic_vector_photo"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <ImageView
        android:id="@+id/imagesIntro"
        android:layout_marginBottom="@dimen/_125sdp"
        android:src="@drawable/group_image_intro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="200dp"/>
    <ImageView
        android:src="@drawable/introduction_image_shadow"
        app:layout_constraintStart_toStartOf="@+id/imagesIntro"
        app:layout_constraintEnd_toEndOf="@+id/imagesIntro"
        app:layout_constraintBottom_toBottomOf="@+id/imagesIntro"
        app:layout_constraintTop_toTopOf="@+id/imagesIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/platform"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_35sdp"
        app:layout_constraintTop_toBottomOf="@+id/imagesIntro"
        android:src="@drawable/platform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        app:layout_constraintStart_toStartOf="parent"
        app:cornerRadius="25dp"
        android:id="@+id/continueButton"
        android:text="@string/continues"
        app:backgroundTint="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/platform"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_45sdp"/>
    <TextView
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/policies"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/continueButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>