<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/app_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".auth.LoginFragment">


            <TextView
                android:id="@+id/header"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_80sdp"
                android:text="@string/we_sent_code"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                />

            <TextView
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_gravity="center"
                android:textColor="@color/gray_light"
                android:text="@string/enter_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.mukesh.OtpView
                android:layout_gravity="center"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/loginPhoneEdit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/number_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:inputType="text"
                android:textColor="@color/white"
                android:itemBackground="@color/gray"
                android:textAllCaps="true"
                app:OtpHideLineWhenFilled="false"
                app:OtpItemCount="6"
                app:OtpItemSpacing="@dimen/_6sdp"
                app:OtpLineColor="@android:color/transparent"
                app:OtpState_filled="true"
                app:OtpViewType="rectangle" />

            <TextView
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_gravity="center"
                android:textColor="@color/gray_light"
                android:text="@string/code_didnt_recieved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="@dimen/_25sdp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/ic_next_oval"
                    app:layout_constraintTop_toTopOf="parent"
                    android:id="@+id/nextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ImageView
                    app:layout_constraintEnd_toEndOf="@id/nextButton"
                    app:layout_constraintStart_toStartOf="@id/nextButton"
                    app:layout_constraintBottom_toBottomOf="@id/nextButton"
                    app:layout_constraintTop_toTopOf="@id/nextButton"
                    app:srcCompat="@drawable/ic_vector"
                    app:tint="@color/black"
                    android:id="@+id/arrowButton"
                    android:layout_width="25dp"
                    android:layout_height="25dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- <com.google.android.material.button.MaterialButton
                 android:id="@+id/signUpButton"
                 android:layout_width="match_parent"
                 app:cornerRadius="10dp"
                 app:strokeWidth="1dp"
                 app:strokeColor="@color/black"
                 android:gravity="center"
                 android:textColor="@color/black"
                 android:textAllCaps="false"
                 app:backgroundTint="@color/white"
                 android:layout_height="@dimen/_63sdp"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_30sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:text="@string/sign_up"
                 android:textSize="@dimen/_16sdp" />-->

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>